; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_blame.c_sanity_check_on_fail.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_blame.c_sanity_check_on_fail.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.blame_scoreboard = type { i32 }

@OUTPUT_SHOW_SCORE = common dso_local global i32 0, align 4
@OUTPUT_SHOW_NUMBER = common dso_local global i32 0, align 4
@OUTPUT_SHOW_NAME = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"Baa %d!\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.blame_scoreboard*, i32)* @sanity_check_on_fail to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sanity_check_on_fail(%struct.blame_scoreboard* %0, i32 %1) #0 {
  %3 = alloca %struct.blame_scoreboard*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.blame_scoreboard* %0, %struct.blame_scoreboard** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @OUTPUT_SHOW_SCORE, align 4
  %7 = load i32, i32* @OUTPUT_SHOW_NUMBER, align 4
  %8 = or i32 %6, %7
  %9 = load i32, i32* @OUTPUT_SHOW_NAME, align 4
  %10 = or i32 %8, %9
  store i32 %10, i32* %5, align 4
  %11 = load %struct.blame_scoreboard*, %struct.blame_scoreboard** %3, align 8
  %12 = call i32 @find_alignment(%struct.blame_scoreboard* %11, i32* %5)
  %13 = load %struct.blame_scoreboard*, %struct.blame_scoreboard** %3, align 8
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @output(%struct.blame_scoreboard* %13, i32 %14)
  %16 = load i32, i32* %4, align 4
  %17 = call i32 @die(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 %16)
  ret void
}

declare dso_local i32 @find_alignment(%struct.blame_scoreboard*, i32*) #1

declare dso_local i32 @output(%struct.blame_scoreboard*, i32) #1

declare dso_local i32 @die(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
